# LibreAssistant

./: .dockerignore  .env.example  .gitignore  .markdownlint.yml  =4.0.0  AGENTS.md  API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_REVIEW_SUMMARY.md  DUPLICATE_DETECTION_SUMMARY.md  Dockerfile  Dockerfile.dev  ENHANCED_PLUGIN_TRACKING_SUMMARY.md  FEEDBACK_VERIFICATION.md  GITHUB_UPDATE_COMMANDS.md  JSON_PARSING_ENHANCEMENT.md  LICENSE  LICENSE.txt  LLM_PROTOCOL.md  LibreAssistant Algorithmic Spec.txt  LibreAssistant Creation Task Breakdown.txt  MARKDOWN_FEATURES.md  MIGRATION.md  ONBOARDING.md  OVERVIEW.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PLUGIN-CONVERSIONS.md  PLUGIN_API.md  PLUGIN_AUTOSTART.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  (+54 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  TROUBLESHOOTING_PLAN.md  copilot-algorithm.md  copilot-instructions.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  debug_rust_call.py  main.py  pyproject.toml  requirements.txt  test_backend.py  test_backend_simple.py  test_models_validation.py  test_payload.json  test_phase1a.py
backend/agents/: __init__.py  content_extractor.py  search_agent.py
backend/db/: __init__.py  database.py  models.py  operations.py
backend/llm/: __init__.py  ollama_client.py  prompt_manager.py
backend/utils/: __init__.py  config.py  logger.py
community-themes/: README.md
community-themes/solarized/: metadata.json  theme.css
config/: app.db  mcp.consent.json  mcp.registry.json
docs/: DATABASE_SCHEMA.md  GITHUB_WORKFLOWS.md  IMPLEMENTATION_ROADMAP.md  PHASE_1D_PLAN.md  PHASE_1_1_STEP_1_COMPLETION.md  SCREEN_READER_TESTING.md  accessibility-audit-report.md  accessibility.md  api.md  bug-bash-guide.md  configuration.md  data-vault.md  echo_plugin.md  file_io_plugin.md  law_api.md  network-policy.md  onboarding.md  plugin-api.md  providers.md  think_tank_plugin.md  touch-interactions.md  transparency.md  usability-walkthrough-guide.md  user-testing-quick-start.md
docs/modules/: agents.md  database.md  llm.md
docs/testing/: testing-guide.md
docs/user-guide/: getting-started.md
docs/user-guides/: README.md  changing-themes.md  installing-plugins.md  switching-providers.md  system-health.md
frontend/: README.md  jsconfig.json  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
issues/: Ollama_connection_not_working.md  json-response-parsing-fix.md
logs/: README.md
plugins/brave_search/: plugin-manifest.json  server.py
plugins/courtlistener/: plugin-manifest.json  server.py
public/: index.html
scripts/: README.md  audit-color-contrast.js  build_theme_catalog.py  check_license_headers.py  fix-color-contrast.js  setup-test-env.py  test_theme_marketplace.py  validate_themes.py
servers/: README.md
templates/: bug-bash-session-template.md  bug-report-template.md  chat.html  demo.html  index.html  plugin_catalogue.html  requests_screen.html  usability-report-template.md  usability-session-template.md
tests/: README-responsive.md  README.md  UI_TEST_COVERAGE.md  accessibility-contrast.test.js  aria-accessibility-test.html  conftest.py  keyboard-navigation-test.html  main-tabs-test.html  mobile-responsive-test.html  modal-dialog-accessibility-test.html  modal-responsive-validation.html  nvda-specific-testing.html  onboarding-flow-test.html  responsive-layout-test.html  screen-reader-user-flows.html  test_cli.py  test_db_connection_cycle.py  test_db_encryption.py  test_db_key_quotes.py  test_db_prune.py  test_echo_plugin.py  test_env_setup.py  test_experts_argumentation.py  test_experts_communications.py  test_experts_devils_advocate.py  test_experts_executive.py  test_experts_research.py  test_experts_visualizer.py  test_feedback_mechanisms.py  test_file_audit.py  test_file_io_plugin.py  test_history.py  test_history_record.py  test_kernel.py  test_law_by_keystone_plugin.py  test_main.py  test_mcp_adapter.py  test_mcp_consent.py  test_mock_integration.py  test_pagination.py  (+15 more)
ui/: README.md  theme-catalog.json  tokens.css
(+116 files in other folders)
