# Copyright (c) 2024 LibreAssistant contributors.
# Licensed under the MIT License.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "libreassistant"
version = "0.1.0"
description = "LibreAssistant microkernel application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LibreAssistant contributors"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "cryptography",
    "cssutils",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "types-cryptography",
    "types-cssutils",
    "types-fastapi",
    "types-pydantic",
    "types-uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
mypy_path = ["typings"]

