# Copyright (c) 2024 LibreAssistant contributors.
# Licensed under the MIT License.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "libreassistant"
version = "0.1.0"
description = "LibreAssistant microkernel application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LibreAssistant contributors"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "cryptography",
    "cssutils",
    "httpx",
    "pysqlcipher3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "types-cryptography",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
mypy_path = "typings"

[[tool.mypy.overrides]]
module = ["cryptography", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic", "pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pysqlcipher3", "pysqlcipher3.*"]
ignore_missing_imports = true

