[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "libreassistant-backend"
version = "0.1.0"
description = "LibreAssistant Backend - Python AI Engine"
authors = ["Aubrey Hayes <aubreyhayes47@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
aiohttp = "^3.9.0"
pycryptodome = "^3.19.0"
playwright = "^1.40.0"
selenium = "^4.15.0"
beautifulsoup4 = "^4.12.0"
readability-lxml = "^0.8.1"
requests = "^2.31.0"
duckduckgo_search = "^5.1.0"
ollama = "^0.1.8"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.black]
line-length = 88
target-version = ['py310']


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
